change build scripts

--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -8,8 +8,11 @@ defaults
   timeout client 50000ms
   timeout server 50000ms
 
-backend api
-  server web web:80
+backend django
+  server django django:80
+
+backend ui
+  server ui ui:80
 
 #backend ui
 #  server rails_server 127.0.0.1:8002       # add a server to this backend
@@ -17,4 +20,4 @@ backend api
 frontend qa4sm
     bind *:80
     mode tcp
-    default_backend api
+    default_backend django
