compose file update

--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -9,7 +9,7 @@ defaults
   timeout server 50000ms
 
 backend django
-  server django django:80
+  server django web:80
 
 backend ui
   server ui ui:80
