rev-proxy update

--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -1,7 +1,9 @@
 global
+  log stdout format raw local0
   #debug
 
 defaults
+  log global
   mode http
   option httpclose                         # close the tcp connection after every request
   timeout connect 5000ms
