--- a/UI/package.json
+++ b/UI/package.json
@@ -12,8 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.0",
-    "@angular/cdk": "^11.2.8",
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
@@ -22,59 +22,59 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@fortawesome/angular-fontawesome": "^0.8.2",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@tinkoff/ng-dompurify": "^3.0.0",
-    "@types/file-saver": "^2.0.1",
-    "@types/jquery": "^3.5.5",
-    "@types/ol": "^6.4.2",
-    "@types/proj4": "^2.5.0",
+    "@types/file-saver": "^2.0.4",
+    "@types/jquery": "^3.5.10",
+    "@types/ol": "^6.5.3",
+    "@types/proj4": "^2.5.2",
     "angular-gallery": "^1.0.2",
     "angular2-uuid": "^1.1.1",
-    "bootstrap": "^4.6.0",
-    "dompurify": "^2.2.7",
+    "bootstrap": "^4.6.1",
+    "dompurify": "^2.3.4",
     "file-saver": "^2.0.5",
     "file-saver-es": "^2.0.5",
     "jquery": "^3.6.0",
     "jw-angular-pagination": "^1.2.0",
-    "ng-gallery": "^5.0.0",
-    "ngx-logger": "^4.1.9",
-    "ngx-page-scroll": "^7.0.4",
-    "ngx-page-scroll-core": "^7.0.4",
-    "ngx-pagination": "^5.0.0",
-    "ol": "^6.5.0",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^11.2.3",
-    "proj4": "^2.7.2",
-    "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.6",
+    "ng-gallery": "^5.1.1",
+    "ngx-logger": "^4.3.3",
+    "ngx-page-scroll": "^7.0.6",
+    "ngx-page-scroll-core": "^7.0.6",
+    "ngx-pagination": "^5.1.1",
+    "ol": "^6.9.0",
+    "primeflex": "^3.1.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.2",
+    "proj4": "^2.7.5",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "save": "^2.4.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.12",
+    "@angular-devkit/build-angular": "^0.1102.15",
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
-    "@angular/localize": "^11.1.2",
-    "@types/dompurify": "^2.2.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular/localize": "^11.2.14",
+    "@types/dompurify": "^2.3.2",
+    "@types/jasmine": "^3.6.11",
+    "@types/node": "^12.20.37",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.1.5"
+    "typescript": "^4.1.6"
   }
 }
