update rev. proxy config

--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -10,16 +10,14 @@ defaults
   timeout client 50000ms
   timeout server 50000ms
 
+frontend qa4sm
+    bind *:80
+    mode tcp
+    use_backend ui if { url_beg /ui }
+    default_backend django
+
 backend django
   server django web:80
 
 backend ui
   server ui ui:80
-
-#backend ui
-#  server rails_server 127.0.0.1:8002       # add a server to this backend
-
-frontend qa4sm
-    bind *:80
-    mode tcp
-    default_backend django
