--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -255,6 +255,7 @@ dependencies:
     - urllib3==1.26.7
     - vine==5.0.0
     - wcwidth==0.2.5
+    - django_rest_passwordreset==1.2.1
     - wrapt==1.13.3
     - xarray==0.18.2
     - zarr==2.10.2
