--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -109,7 +109,6 @@ dependencies:
   - ncurses=6.2
   - nspr=4.32
   - nss=3.72
-  - numpy=1.22.0
   - numpy-base=1.20.3
   - olefile=0.46
   - openblas=0.3.18
@@ -225,6 +224,7 @@ dependencies:
     - netcdf4==1.5.8
     - numba==0.53.1
     - numcodecs==0.9.1
+    - numpy==1.22.0
     - param==1.12.0
     - parse==1.19.0
     - prompt-toolkit==3.0.22
