--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -46,6 +46,9 @@ services:
     image: "awst/qa4sm-proxy:1.8.2"
     ports:
       - "8080:80"
+  ui:
+    image: "awst/qa4sm-ui:1.8.2"
+
   worker-1:
     image: "awst/qa4sm-worker:1.8.2"
     environment:
