--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -13,8 +13,8 @@ defaults
 frontend qa4sm
     bind *:80
     mode tcp
-    use_backend django if { url_beg /admin }
-    default_backend ui
+    use_backend ui if { url_beg /ui }
+    default_backend django
 
 backend django
   server django web:80
