ui backend path changed

--- a/docker/proxy/haproxy.cfg
+++ b/docker/proxy/haproxy.cfg
@@ -13,7 +13,7 @@ defaults
 frontend qa4sm
     bind *:80
     mode tcp
-    use_backend ui if { url_beg /ui }
+    use_backend ui if { url_beg / }
     default_backend django
 
 backend django
