--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -237,7 +237,7 @@ dependencies:
     - pytest-django==4.5.2
     - pytest-mpl==0.13
     - qa4sm-preprocessing==0.1.1
-    - git+https://github.com/wpreimes/qa4sm-reader.git@update-dataset-names
+    - qa4sm-reader==0.7.1
     - redis==4.1.2
     - repurpose==0.8
     - requests==2.27.1
