restarting all the containers added

--- a/docker/compose/test/docker-compose.yml
+++ b/docker/compose/test/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - "8081:80"
   ui:
     image: "awst/qa4sm-ui:latest"
+    restart: always
 
   worker-1:
     image: "awst/qa4sm-worker:latest"
