--- a/docker/compose/prod/docker-compose.yml
+++ b/docker/compose/prod/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:      
   qa4sm-db:
     image: "postgres:10"
+    restart: always
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
@@ -14,12 +15,15 @@ services:
         
   qa4sm-redis:
     image: "redis:alpine"
+    restart: always
   
   qa4sm-rabbitmq:
     image: "rabbitmq"
+    restart: always
 
   web:
     image: "awst/qa4sm:2.0.1"
+    restart: always
     environment:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
@@ -44,13 +48,16 @@ services:
 
   proxy:
     image: "awst/qa4sm-proxy:2.0.1"
+    restart: always
     ports:
       - "8080:80"
   ui:
     image: "awst/qa4sm-ui:2.0.1"
+    restart: always
 
   worker-1:
     image: "awst/qa4sm-worker:2.0.1"
+    restart: always
     environment:
       QA4SM_DB_HOST: "${QA4SM_DB_HOST}"
       QA4SM_CELERY_WORKERS: "${QA4SM_WORKER_THREAD_PER_NODE}"
