--- a/docker/compose/test-2/docker-compose.yml
+++ b/docker/compose/test-2/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - "8083:80"
   ui:
     image: "awst/qa4sm-ui:latest-2"
+    restart: always
 
   worker-1:
     image: "awst/qa4sm-worker:latest-2"
