testing different actions settings

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8']
-        os: ["ubuntu-latest"]
+        os: ["ubuntu 18.04.6"]
     steps:
       - uses: actions/checkout@v2
         with:
