Add manual CI trigger

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ name: tests
 on:
   push:
   pull_request:
+  workflow_dispatch:
   schedule: # only upstream, won't trigger on forks!
     - cron: '0 0 * * *' # daily
 
