--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -268,5 +268,5 @@ dependencies:
     - xarray==0.18.2
     - zarr==2.11.3
     - ismn==1.3.2
-    - git+https://github.com/awst-austria/qa4sm-reader@master
+    - qa4sm-reader==0.7.5
     - git+https://github.com/awst-austria/qa4sm-preprocessing@master
