--- a/UI/tsconfig.json
+++ b/UI/tsconfig.json
@@ -16,6 +16,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
+    "esModuleInterop": true,
     "lib": [
       "es2019",
       "dom"
