--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -268,5 +268,5 @@ dependencies:
     - xarray==0.18.2
     - zarr==2.11.3
     - ismn==1.3.2
-    - git+https://github.com/awst-austria/qa4sm-reader@master
+    - git+https://github.com/awst-austria/qa4sm-reader@864722a4b158c41a0b384cf94c97118f3c12f869
     - git+https://github.com/awst-austria/qa4sm-preprocessing@master
