--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -267,6 +267,7 @@ dependencies:
     - wrapt==1.14.1
     - xarray==0.18.2
     - zarr==2.11.3
-    - ismn==1.3.2
-    - git+https://github.com/awst-austria/qa4sm-reader@864722a4b158c41a0b384cf94c97118f3c12f869
-    - git+https://github.com/awst-austria/qa4sm-preprocessing@master
+    - ismn==1.3.3
+    # release new version of these packages
+    - git+https://github.com/awst-austria/qa4sm-reader@bc0c6ae4186ef87466c220165bc6756572c7312c
+    - git+https://github.com/awst-austria/qa4sm-preprocessing@69aef57ba8920da0c0340d4ae263135e654215ca
