--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -268,6 +268,5 @@ dependencies:
     - xarray==0.18.2
     - zarr==2.11.3
     - ismn==1.3.3
-    # release new version of these packages
-    - git+https://github.com/awst-austria/qa4sm-reader@81d2b292f15300c3b3e17102602e2393a7580eb7
-    - git+https://github.com/awst-austria/qa4sm-preprocessing@69aef57ba8920da0c0340d4ae263135e654215ca
+    - qa4sm-reader==0.9
+    - qa4sm-preprocessing==0.2
