--- a/UI/package.json
+++ b/UI/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~12.2.17",
     "@angular/platform-browser-dynamic": "~12.2.17",
     "@angular/router": "~12.2.17",
-    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -38,6 +38,7 @@
     "file-saver": "^2.0.5",
     "file-saver-es": "^2.0.5",
     "jquery": "^3.6.0",
+    "jszip": "^3.10.1",
     "ng-gallery": "^5.0.0",
     "ngx-logger": "^4.1.9",
     "ngx-page-scroll": "^7.0.4",
