--- a/UI/package.json
+++ b/UI/package.json
@@ -41,6 +41,8 @@
     "jszip": "^3.10.1",
     "ng-gallery": "^5.0.0",
     "ngx-logger": "^4.1.9",
+    "ngx-page-scroll": "^10.0.0",
+    "ngx-page-scroll-core": "^10.0.0",
     "ngx-pagination": "^5.0.0",
     "ol": "^6.5.0",
     "primeflex": "^2.0.0",
