--- a/UI/package.json
+++ b/UI/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~13.4.0",
     "@angular/platform-browser-dynamic": "~13.4.0",
     "@angular/router": "~13.4.0",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -41,10 +41,8 @@
     "jszip": "^3.10.1",
     "ng-gallery": "^5.0.0",
     "ngx-logger": "^4.1.9",
-    "ngx-page-scroll": "^10.0.0",
-    "ngx-page-scroll-core": "^10.0.0",
     "ngx-pagination": "^5.0.0",
-    "ol": "^6.5.0",
+    "ol": "^6.15.1",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0",
@@ -64,7 +62,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
