--- a/UI/package.json
+++ b/UI/package.json
@@ -12,21 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.4.0",
+    "@angular/animations": "^14.3.0",
     "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "~13.4.0",
-    "@angular/core": "~13.4.0",
-    "@angular/forms": "~13.4.0",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@tinkoff/ng-dompurify": "^3.0.0",
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.5",
@@ -44,8 +44,8 @@
     "ngx-pagination": "^5.0.0",
     "ol": "^6.15.1",
     "primeflex": "^2.0.0",
-    "primeicons": "^5.0.0",
-    "primeng": "^13.0.0",
+    "primeicons": "^6.0.0",
+    "primeng": "^14.0.0",
     "proj4": "^2.7.2",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.6",
@@ -54,10 +54,10 @@
     "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.11",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "~13.4.0",
-    "@angular/localize": "^13.4.0",
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/localize": "^14.3.0",
     "@types/dompurify": "^2.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
