--- a/UI/package.json
+++ b/UI/package.json
@@ -12,66 +12,75 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/forms": "^14.3.0",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/router": "^14.3.0",
+    "@angular/animations": "^15.2.7",
+    "@angular/cdk": "^15.2.7",
+    "@angular/common": "^15.2.7",
+    "@angular/compiler": "^15.2.7",
+    "@angular/core": "^15.2.7",
+    "@angular/forms": "^15.2.7",
+    "@angular/platform-browser": "^15.2.7",
+    "@angular/platform-browser-dynamic": "^15.2.7",
+    "@angular/router": "^15.2.7",
     "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
-    "@tinkoff/ng-dompurify": "^3.0.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@popperjs/core": "^2.11.7",
+    "@tinkoff/ng-dompurify": "^4.0.0",
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.5",
-    "@types/ol": "^6.4.2",
+    "@types/ol": "^7.0.0",
     "@types/proj4": "^2.5.0",
     "angular2-uuid": "^1.1.1",
-    "bootstrap": "^4.6.0",
-    "dompurify": "^2.2.7",
+    "bootstrap": "^5.2.3",
+    "dompurify": "^3.0.2",
     "file-saver": "^2.0.5",
     "file-saver-es": "^2.0.5",
     "jquery": "^3.6.0",
     "jszip": "^3.10.1",
-    "ng-gallery": "^5.0.0",
-    "ngx-logger": "^4.1.9",
-    "ngx-pagination": "^5.0.0",
-    "ol": "^6.15.1",
-    "primeflex": "^2.0.0",
+    "ngx-logger": "^5.0.12",
+    "ngx-pagination": "^6.0.3",
+    "ol": "^7.3.0",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.0",
-    "primeng": "^14.0.0",
+    "primeng": "^15.4.0",
     "proj4": "^2.7.2",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.6",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "^0.11.8"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "^14.2.11",
-    "@angular/compiler-cli": "^14.3.0",
-    "@angular/localize": "^14.3.0",
-    "@types/dompurify": "^2.2.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^15.2.6",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "^15.2.6",
+    "@angular/compiler-cli": "^15.2.7",
+    "@angular/localize": "^15.2.7",
+    "@types/dompurify": "^3.0.2",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.15.12",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jasmine-core": "^4.0.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "~4.6.4"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "prettier": "^2.8.7",
+    "protractor": "^7.0.0",
+    "ts-node": "~10.9.1",
+    "typescript": "~4.8.2"
   }
 }
