--- a/UI/angular.json
+++ b/UI/angular.json
@@ -109,6 +109,14 @@
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
+            ],
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
             ]
           }
         },
@@ -131,5 +139,6 @@
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
-  }
+  },
+  "defaultProject": "UI"
 }
