back-end environment updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-pytesmo>=0.9
-sqlparse
-numpy~=1.19.4
-scipy
-pandas~=1.1.4
-netCDF4~=1.5.4
-cython
-pytest~=5.4.3
-matplotlib~=3.3.3
-pyproj
-django>=2.1
-pyresample
-pynetcf
-coverage
-pygeogrids
-pytest-django
-django-widget-tweaks
-psycopg2-binary
-pytest-cov
-pytest-mpl
-celery==4.1.1
-celery[redis]
-gldas>=0.5
-smap-io>=0.3
-django-countries
-c3s-sm>=0.1.1
-ascat>=1.0
-cartopy~=0.18.0
-ismn>=0.3
-esa_cci_sm>=0.1.1
-smos>=0.2
-ecmwf-models>=0.5
+ascat==2.1.0
+c3s_sm==0.1.2
+cf_xarray==0.8.0
+Django==3.2.16
+django_countries==7.5.1
+django_rest_passwordreset==1.3.0
+ecmwf_models==0.7
+esa_cci_sm==0.3.0
+gldas==0.6.1
+ismn==1.3.3
+matplotlib==3.7.1
+netCDF4==1.6.3
+netCDF4==1.6.3
+numpy==1.24.3
+pandas==1.5.3
+parse==1.19.0
+Pillow==9.5.0
+Pillow==9.5.0
+pygeobase==0.6.2
+pynetcf==0.5.0
+PySide2==5.15.2.1
+pytesmo==0.15.1
+pytest==7.3.1
+python_dateutil==2.8.2
+pytz==2023.3
+qa4sm_preprocessing==0.2
+qa4sm_reader==0.9
+Requests==2.30.0
+setuptools==67.7.2
+smap_io==0.5
+smos==0.2
+xarray==2023.1.0
 seaborn
 
 djangorestframework~=3.12.2
