--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -85,8 +85,6 @@ dependencies:
   - iniconfig=2.0.0
   - jasper=4.0.0
   - jinja2=3.1.2
-  - jpeg=9e
-  - json-c=0.15
   - keyutils=1.6.1
   - kiwisolver=1.4.4
   - krb5=1.20.1
@@ -140,7 +138,7 @@ dependencies:
   - libpq=15.2
   - libprotobuf=3.21.12
   - libsndfile=1.2.0
-  - libsqlite=3.40.0
+  - libsqlite=3.41.2
   - libssh2=1.10.0
   - libstdcxx-ng=12.2.0
   - libsystemd0=253
@@ -219,7 +217,7 @@ dependencies:
   - six=1.16.0
   - snappy=1.1.10
   - sortedcontainers=2.4.0
-  - sqlite=3.40.0
+  - sqlite=3.41.2
   - sqlparse=0.4.4
   - tblib=1.7.0
   - tk=8.6.12
@@ -264,6 +262,7 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
+    - esa-cci-sm
     - amqp==5.1.1
     - ascat==2.1.0
     - asciitree==0.3.3
@@ -272,7 +271,7 @@ dependencies:
     - c3s-sm==0.1.2
     - cadati==0.0.4
     - cdsapi==0.6.1
-    - celery==5.2.6
+    - celery==5.2.7
     - cf-xarray==0.8.0
     - cftime==1.6.2
     - click-didyoumean==0.3.0
@@ -285,15 +284,12 @@ dependencies:
     - django-countries==7.5.1
     - django-rest-passwordreset==1.3.0
     - django-widget-tweaks==1.4.12
-    - djangorestframework==3.12.4
-    - drf-yasg==1.20.0
+    - djangorestframework==3.14.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.3
-    - ecmwf-models==0.7
-    - esa-cci-sm==0.1.1
-    - gldas==0.6.1
-    - h5netcdf==0.11.0
+    - ecmwf-models==0.9.2
     - entrypoints==0.4
+    - gldas==0.7.0
     - fasteners==0.18
     - h5py==3.8.0
     - ismn==1.3.3
@@ -331,5 +327,4 @@ dependencies:
     - trollsift==0.2.1
     - vine==5.0.0
     - wcwidth==0.2.6
-    - xarray==0.18.2
     - zarr==2.14.2
