--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -262,7 +262,6 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
-    - esa-cci-sm
     - amqp==5.1.1
     - ascat==2.1.0
     - asciitree==0.3.3
@@ -289,6 +288,7 @@ dependencies:
     - ecmwf-api-client==1.6.3
     - ecmwf-models==0.9.2
     - entrypoints==0.4
+    - esa-cci-sm==0.1.1
     - gldas==0.7.0
     - fasteners==0.18
     - h5py==3.8.0
