--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -288,7 +288,7 @@ dependencies:
     - ecmwf-api-client==1.6.3
     - ecmwf-models==0.9.2
     - entrypoints==0.4
-    - esa-cci-sm==0.1.1
+    - esa-cci-sm
     - gldas==0.7.0
     - fasteners==0.18
     - h5py==3.8.0
