--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -262,6 +262,9 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
+    - esa-cci-sm
+    - pygeogrids
+    - smecv-grid
     - amqp==5.1.1
     - ascat==2.1.0
     - asciitree==0.3.3
@@ -288,7 +291,6 @@ dependencies:
     - ecmwf-api-client==1.6.3
     - ecmwf-models==0.9.2
     - entrypoints==0.4
-    - esa-cci-sm
     - gldas==0.7.0
     - fasteners==0.18
     - h5py==3.8.0
@@ -307,7 +309,6 @@ dependencies:
     - psycopg2-binary==2.9.6
     - pyct==0.5.0
     - pygeobase==0.6.2
-    - pygeogrids==0.4.2
     - pynetcf==0.5.0
     - pytesmo==0.15.1
     - pytest-cov==4.0.0
@@ -320,7 +321,6 @@ dependencies:
     - scikit-learn==1.2.2
     - seaborn==0.12.2
     - smap-io==0.5
-    - smecv-grid==0.3
     - smos==0.2
     - threadpoolctl==3.1.0
     - tqdm==4.65.0
