--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -6,23 +6,9 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.8
-  - arrow-cpp=10.0.1
   - asgiref=3.6.0
   - attr=2.5.1
-  - aws-c-auth=0.6.26
-  - aws-c-cal=0.5.26
-  - aws-c-common=0.8.17
-  - aws-c-compression=0.2.16
-  - aws-c-event-stream=0.2.20
-  - aws-c-http=0.7.7
-  - aws-c-io=0.13.21
-  - aws-c-mqtt=0.8.6
-  - aws-c-s3=0.2.8
-  - aws-c-sdkutils=0.1.9
-  - aws-checksums=0.1.14
-  - aws-crt-cpp=0.19.9
-  - aws-sdk-cpp=1.10.57
-  - blosc=1.21.3
+  - attrs=21.4.0
   - bokeh=3.1.0
   - brotli=1.0.9
   - brotli-bin=1.0.9
@@ -30,14 +16,11 @@ dependencies:
   - bzip2=1.0.8
   - c-ares=1.18.1
   - ca-certificates=2023.5.7
-  - cairo=1.16.0
   - cartopy=0.21.1
   - certifi=2023.5.7
   - cffi=1.15.1
-  - charset-normalizer=3.1.0
   - click=8.1.3
   - cloudpickle=2.2.1
-  - colorama=0.4.6
   - configobj=5.0.8
   - contourpy=1.0.7
   - cryptography=40.0.2
@@ -51,8 +34,8 @@ dependencies:
   - distributed=2023.4.1
   - django=3.2.16
   - eccodes=2.30.0
-  - exceptiongroup=1.1.1
   - expat=2.5.0
+  - fftw=3.3.10
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
@@ -66,35 +49,29 @@ dependencies:
   - fsspec=2023.5.0
   - geos=3.11.2
   - gettext=0.21.1
-  - gflags=2.2.2
-  - glib=2.76.2
-  - glib-tools=2.76.2
-  - glog=0.6.0
-  - graphite2=1.3.13
+  - giflib=5.2.1
   - gst-plugins-base=1.22.0
   - gstreamer=1.22.0
-  - harfbuzz=6.0.0
   - hdf4=4.2.15
   - hdf5=1.14.0
+  - heapdict=1.0.1
   - icu=72.1
   - idna=3.4
   - importlib-metadata=6.6.0
-  - importlib-resources=5.12.0
   - importlib_metadata=6.6.0
-  - importlib_resources=5.12.0
   - iniconfig=2.0.0
+  - jack=1.9.18
   - jasper=4.0.0
   - jinja2=3.1.2
+  - jpeg=9e
+  - json-c=0.15
   - keyutils=1.6.1
   - kiwisolver=1.4.4
   - krb5=1.20.1
-  - lame=3.100
   - lcms2=2.15
   - ld_impl_linux-64=2.40
   - lerc=4.0.0
-  - libabseil=20230125.0
   - libaec=1.0.6
-  - libarrow=10.0.1
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
@@ -103,50 +80,40 @@ dependencies:
   - libcblas=3.9.0
   - libclang=16.0.3
   - libclang13=16.0.3
-  - libcrc32c=1.1.2
   - libcups=2.3.3
   - libcurl=8.0.1
+  - libdb=6.2.32
   - libdeflate=1.18
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
-  - libexpat=2.5.0
   - libffi=3.4.2
   - libflac=1.4.2
   - libgcc-ng=12.2.0
-  - libgcrypt=1.10.1
   - libgfortran-ng=12.2.0
   - libgfortran5=12.2.0
   - libglib=2.76.2
   - libglu=9.0.0
   - libgomp=12.2.0
-  - libgoogle-cloud=2.10.0
-  - libgpg-error=1.46
-  - libgrpc=1.54.1
   - libiconv=1.17
-  - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
   - libllvm16=16.0.3
   - libnetcdf=4.9.2
   - libnghttp2=1.52.0
   - libnsl=2.0.0
-  - libnuma=2.0.16
   - libogg=1.3.4
   - libopenblas=0.3.21
   - libopus=1.3.1
   - libpng=1.6.39
   - libpq=15.2
-  - libprotobuf=3.21.12
   - libsndfile=1.2.0
-  - libsqlite=3.41.2
   - libssh2=1.10.0
   - libstdcxx-ng=12.2.0
-  - libsystemd0=253
-  - libthrift=0.18.1
   - libtiff=4.5.0
-  - libutf8proc=2.8.0
+  - libtool=2.4.6
   - libuuid=2.38.1
   - libvorbis=1.3.7
+  - libwebp=1.2.2
   - libwebp-base=1.3.0
   - libxcb=1.13
   - libxkbcommon=1.5.0
@@ -159,7 +126,6 @@ dependencies:
   - markupsafe=2.1.2
   - matplotlib=3.7.1
   - matplotlib-base=3.7.1
-  - mpg123=1.31.3
   - msgpack-python=1.0.5
   - munkres=1.1.4
   - mysql-common=8.0.32
@@ -167,27 +133,20 @@ dependencies:
   - ncurses=6.3
   - nspr=4.35
   - nss=3.89
-  - numpy=1.24.3
   - openjpeg=2.5.0
   - openssl=3.1.0
-  - orc=1.8.3
   - packaging=23.1
   - pandas=1.5.3
-  - parquet-cpp=1.5.1
   - partd=1.4.0
   - pcre2=10.40
   - pillow=9.5.0
   - pip=23.1.2
-  - pixman=0.40.0
-  - platformdirs=3.5.0
   - pluggy=1.0.0
-  - ply=3.11
-  - pooch=1.7.0
   - proj=9.2.0
   - psutil=5.9.5
   - pthread-stubs=0.4
-  - pulseaudio-client=16.1
-  - pyarrow=10.0.1
+  - pulseaudio=16.1
+  - py=1.11.0
   - pycparser=2.21
   - pygrib=2.1.4
   - pykdtree=1.3.7.post0
@@ -206,16 +165,12 @@ dependencies:
   - pytz=2023.3
   - pyyaml=6.0
   - qt-main=5.15.8
-  - re2=2023.02.02
   - readline=8.2
-  - requests=2.29.0
-  - s2n=1.3.42
   - scipy=1.10.1
   - setuptools=67.7.2
   - shapely=2.0.1
   - sip=6.7.9
   - six=1.16.0
-  - snappy=1.1.10
   - sortedcontainers=2.4.0
   - sqlite=3.41.2
   - sqlparse=0.4.4
@@ -225,36 +180,22 @@ dependencies:
   - tomli=2.0.1
   - toolz=0.12.0
   - tornado=6.3
-  - typing-extensions=4.5.0
   - typing_extensions=4.5.0
-  - ucx=1.14.0
   - unicodedata2=15.0.0
   - urllib3=1.26.15
   - wheel=0.40.0
   - xarray=2023.1.0
-  - xcb-util=0.4.0
-  - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.0
-  - xcb-util-renderutil=0.3.9
-  - xcb-util-wm=0.4.1
-  - xkeyboard-config=2.38
   - xorg-fixesproto=5.0
   - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
   - xorg-libx11=1.8.4
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
   - xorg-libxfixes=5.0.3
   - xorg-libxi=1.7.10
-  - xorg-libxrender=0.9.10
-  - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
-  - xorg-xf86vidmodeproto=2.3.1
   - xorg-xproto=7.0.31
-  - xyzservices=2023.2.0
   - xz=5.2.6
   - yaml=0.2.5
   - zict=3.0.0
@@ -262,9 +203,6 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
-    - esa-cci-sm
-    - pygeogrids
-    - smecv-grid
     - amqp==5.1.1
     - ascat==2.1.0
     - asciitree==0.3.3
@@ -274,8 +212,8 @@ dependencies:
     - cadati==0.0.4
     - cdsapi==0.6.1
     - celery==5.2.7
-    - cf-xarray==0.8.0
     - cftime==1.6.2
+    - charset-normalizer==2.0.12
     - click-didyoumean==0.3.0
     - click-plugins==1.1.1
     - click-repl==0.2.0
@@ -283,15 +221,18 @@ dependencies:
     - configparser==5.3.0
     - coverage==7.2.5
     - datedown==0.4
+    - deprecated==1.2.13
     - django-countries==7.5.1
     - django-rest-passwordreset==1.3.0
     - django-widget-tweaks==1.4.12
     - djangorestframework==3.14.0
+    - drf-yasg==1.20.0
     - ease-grid==0.2
     - ecmwf-api-client==1.6.3
     - ecmwf-models==0.9.2
-    - entrypoints==0.4
+    - esa-cci-sm==0.1.1
     - gldas==0.7.0
+    - h5netcdf==0.11.0
     - fasteners==0.18
     - h5py==3.8.0
     - ismn==1.3.3
@@ -303,12 +244,14 @@ dependencies:
     - netcdf4==1.6.3
     - numba==0.57.0
     - numcodecs==0.11.0
+    - numpy==1.24.3
     - param==1.13.0
     - parse==1.19.0
     - prompt-toolkit==3.0.38
     - psycopg2-binary==2.9.6
     - pyct==0.5.0
     - pygeobase==0.6.2
+    - pygeogrids==0.4.2
     - pynetcf==0.5.0
     - pytesmo==0.15.1
     - pytest-cov==4.0.0
@@ -318,13 +261,15 @@ dependencies:
     - qa4sm-reader==0.9
     - redis==4.5.5
     - repurpose==0.9
+    - requests==2.29.0
     - scikit-learn==1.2.2
     - seaborn==0.12.2
     - smap-io==0.5
+    - smecv-grid==0.3
     - smos==0.2
-    - threadpoolctl==3.1.0
     - tqdm==4.65.0
     - trollsift==0.2.1
     - vine==5.0.0
     - wcwidth==0.2.6
+    - wrapt==1.14.1
     - zarr==2.14.2
