--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -9,6 +9,8 @@ dependencies:
   - asgiref=3.6.0
   - attr=2.5.1
   - attrs=21.4.0
+  - backports=1.0
+  - backports.zoneinfo=0.2.1
   - bokeh=2.4.3
   - brotli=1.0.9
   - brotli-bin=1.0.9
@@ -32,7 +34,7 @@ dependencies:
   - dask-core=2023.3.0
   - dbus=1.13.6
   - distributed=2023.3.0
-  - django=4.0
+  - django=4.0.6
   - exceptiongroup=1.1.1
   - expat=2.5.0
   - font-ttf-dejavu-sans-mono=2.37
@@ -181,9 +183,10 @@ dependencies:
   - toml=0.10.2
   - tomli=2.0.1
   - toolz=0.12.0
-  - tornado=6.3
+  - tornado=6.3.2
   - typing-extensions=4.5.0
   - typing_extensions=4.5.0
+  - tzdata=2023c
   - unicodedata2=15.0.0
   - urllib3=1.26.15
   - wheel=0.40.0
@@ -216,7 +219,6 @@ dependencies:
     - ascat==2.1.0
     - asciitree==0.3.3
     - async-timeout==4.0.2
-    - backports-zoneinfo==0.2.1
     - billiard==3.6.4.0
     - c3s-sm==0.1.2
     - cadati==0.0.4
