got everything up and running: in UI/ npm install, ng build. included "baseHref": "/ui/" to line 23 in UI/angular.json

--- a/UI/angular.json
+++ b/UI/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/ui/",
             "outputPath": "dist/UI",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -139,7 +140,8 @@
   "cli": {
     "schematicCollections": [
       "@angular-eslint/schematics"
-    ]
+    ],
+    "analytics": false
   },
   "defaultProject": "UI"
 }
