--- a/UI/angular.json
+++ b/UI/angular.json
@@ -73,7 +73,9 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "UI:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.json",
+            "baseUrl": "/ui/",
+            "baseHref": "/ui/"
           },
           "configurations": {
             "production": {
