adding extra Openlayers dependencies. I guess they can be removed later once the official npm package includes them. https://github.com/openlayers/openlayers/issues/13881

--- a/UI/package.json
+++ b/UI/package.json
@@ -29,6 +29,10 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.7",
     "@tinkoff/ng-dompurify": "^4.0.0",
+    "@types/arcgis-rest-api": "^10.4.5",
+    "@types/geojson": "^7946.0.10",
+    "@types/openlayers": "^4.6.19",
+    "@types/topojson-specification": "^1.0.2",
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.5",
     "@types/proj4": "^2.5.0",
